--- a/src/pug/layouts/base-section/base-section.pug
+++ b/src/pug/layouts/base-section/base-section.pug
@@ -1,12 +1,13 @@
 block variables
   - sectionClass = ''
+  - containerClass = ''
   - sectionTitle = ''
   - sectionText  = ''
 
 section.base-section(class= sectionClass)
-  .container
+  .container(class= containerClass)
     if sectionTitle
       h2.base-title!= sectionTitle
     if sectionText
-      h2.base-text!= sectionText
+      span.base-text!= sectionText
     block content
