--- a/src/pug/sections/fag/fag-about.pug
+++ b/src/pug/sections/fag/fag-about.pug
@@ -3,7 +3,8 @@ include ../../components/main-btn/main-btn
 
 block variables
   - sectionClass = "about"
-  - sectionTitle = 'Мы успешно разрабатываем:'
+  - sectionTitle = 'Мы успешно <span>разрабатываем:</span>'
+  - var useGrid = false
 
 block content
   include ../../content/about-list
