--- a/src/pug/sections/fag/fag-offer.pug
+++ b/src/pug/sections/fag/fag-offer.pug
@@ -1,7 +1,8 @@
 extends ../../layouts/base-section/base-section.pug
 
 block variables
-  - sectionTitle = 'Давайте работать над вашим проектом вместе!'
+  - sectionTitle = 'Давайте работать над вашим <span>проектом вместе!</span>'
+  - useGrid = false
 
 block content
   p.base-text Оставьте заявку и мы свяжемся с Вами в ближайшее время !
