--- a/src/pug/sections/index-page/about.pug
+++ b/src/pug/sections/index-page/about.pug
@@ -3,7 +3,7 @@ include ../../components/main-btn/main-btn
 
 block variables
   - sectionClass = "about"
-  - sectionTitle = 'Что мы делаем'
+  - sectionTitle = 'Что мы <span>делаем</span>'
 
 block content
   include ../../content/about-list
