--- a/src/pug/sections/index-page/features.pug
+++ b/src/pug/sections/index-page/features.pug
@@ -2,7 +2,7 @@ extends ../../layouts/base-section/base-section.pug
 
 block variables
   - sectionClass = "features"
-  - sectionTitle = 'Наши преимущества'
+  - sectionTitle = 'Наши <span>преимущества</span>'
 
 block content
   include ../../content/feature-list
