--- a/src/pug/sections/index-page/questions.pug
+++ b/src/pug/sections/index-page/questions.pug
@@ -3,7 +3,7 @@ include ../../components/main-btn/main-btn
 
 block variables
   - sectionClass = "questions"
-  - sectionTitle = 'Ответы на частые вопросы'
+  - sectionTitle = 'Ответы на частые <span>вопросы</span>'
 
 block content
   include ../../content/question-list
@@ -16,3 +16,4 @@ block content
     text: 'Задать вопрос',
     modal: 'callback'
   })
+
