--- a/src/pug/sections/index-page/workflow.pug
+++ b/src/pug/sections/index-page/workflow.pug
@@ -3,7 +3,7 @@ include ../../components/main-btn/main-btn
 
 block variables
   - sectionClass = "workflow"
-  - sectionTitle = 'Как происходит рабочий процесс'
+  - sectionTitle = 'Как происходит рабочий <span>процесс</span>'
 
 block content
   include ../../content/workflow-list
