--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -39,3 +39,5 @@
 @import '../pug/sections/contacts/contacts';
 @import '../pug/sections/fag/fag';
 @import '../pug/sections/company/company';
+@import '../pug/sections/index-page/offer';
+@import '../pug/sections/index-page/questions';
