--- a/src/pug/components/controls/main-input/_main-input.scss
+++ b/src/pug/components/controls/main-input/_main-input.scss
@@ -10,6 +10,7 @@ $input-type-text-placeholder-color: var(--primary);
 $input-type-text-invalid-color: var(--danger);
 
 input[type='text'],
+input[type='email'],
 input[type='tel'] {
   @extend %btn-reset;
   @extend %flex-centered-content;
