--- a/src/pug/content/about-list.pug
+++ b/src/pug/content/about-list.pug
@@ -4,6 +4,7 @@
       title: 'Сайт-визитка',
       text: 'Небольшой сайт, являющийся Вашей визитной карточкой в сети интернет. Немного информации, фотогалерея, контакты и форма обратной связи.',
       link: '#',
+      price: 'от 20 000 руб',
       linkText: 'Подробнее'
     },
 
@@ -11,6 +12,7 @@
       title: 'Лендинг',
       text: 'Одностраничный сайт описывающий Вашу деятельность или услугу. Больше фото, много информации о компании, разделы с товарами и услугами, формы обратной связи.',
       link: '#',
+      price: 'от 30 000 руб',
       linkText: 'Подробнее'
     },
 
@@ -19,23 +21,32 @@
       text: 'Многостраничный сайт с возможностью заказа товара или услуги через форму обратной связи. Подойдет компаниям, которым нужен сайт, описывающий их сферу деятельности, с полноценными разделами и большим количеством информации.',
       note: '*Не является интернет-магазином.',
       link: '#',
+      price: 'от 120 000 руб',
       linkText: 'Подробнее'
     },
 
     {
       title: 'Интернет-магазин',
       text: 'Все то, что должно быть в современном интернет-магазине и то, к чему привыкли пользователи. Корзина, сравнение, отложенные товары, личный кабинет, все необходимые для Вашего бизнеса интеграции.',
+      price: 'от 220 000 руб',
+      link: '#',
+      linkText: 'Подробнее'
     },
 
     {
       title: 'SPA и WEB-приложения',
       text: 'Много интерактива, программного кода и взаимодействия с пользователем ? Тогда Вам отлично подойдет разработка Web-приложения! Разрабатываем с помощью современных фреймворком, таких как Vue и React.',
+      link: '#',
+      linkText: 'Подробнее'
     },
 
     {
       title: 'СЕО-оптимизация сайта',
       text: 'Выводим Ваш сайт в топ выдачи Яндекс и Google. Проведем комплексную оптимизацию, увеличим видимость, повысим трафик. Как итог — сайт поднимется в выдаче поисковых систем и привлечет больше целевых посетителей.',
-      note: '*Подойдет для многостраничных сайтов.'
+      note: '*Подойдет для многостраничных сайтов.',
+      link: '#',
+      linkText: 'Подробнее',
+      price: 'от 40 000 руб'
     },
 
     //- {
@@ -46,6 +57,9 @@
     {
       title: 'Техническая поддержка',
       text: 'У вас уже есть сайт, но не кому поддерживать его в хорошем состоянии ? Обращайтесь к нам ! Мы сделаем аудит, определим слабые места, составим список и план работ.',
+      price: 'от 10 000 руб',
+      link: '#',
+      linkText: 'Подробнее'
     },
   ]
 
