--- a/src/pug/faq.pug
+++ b/src/pug/faq.pug
@@ -3,7 +3,7 @@ extends layouts/main-layout.pug
 block variables
   -
     const title = "littleweb.ru"
-    const description = "Разработка и продвижение сайтов"
+    const description = "Разработка и продвижение <span>сайтов</span>"
     const keywords = ""
     //- Дополнительные файлы стили для КОНКРЕТНОЙ страницы
     //- const styleFileNames = ['inner']
