--- a/src/styles/variables/root/_typography.scss
+++ b/src/styles/variables/root/_typography.scss
@@ -5,6 +5,7 @@
   // font sizes
   --fs-xl: clamp(36px, 5vw, 64px);
   --fs-lg: clamp(24px, 6vw, 52px);
+  // --fs-lg: clamp(24px, 6vw, 52px);
   --fs-md: clamp(16px, 2.8vw, 24px);
   --fs-sm: clamp(14px, 2.4vw, 18px);
   --fs-xs: 12px;
@@ -29,6 +30,7 @@
   --main-title-fw: var(--fw-b);
   --base-title-fs: var(--fs-lg);
   --base-title-fw: var(--fw-m);
+  --base-title-fr: var(--fw-r);
   --main-text-fs: calc(var(--fs-md) / 1.3);
   --base-text-fs: var(--fs-sm);
   --main-title-color: var(--primary);
