--- a/src/pug/layouts/main-layout.pug
+++ b/src/pug/layouts/main-layout.pug
@@ -20,6 +20,9 @@ html(lang="ru")
     include ../modals/callback-modal
     include ../modals/success-modal
     include ../modals/error-modal
+    include ../modals/expanded-text-modal
+    include ../modals/review-modal
+    include ../modals/fag-modal
 
     block modals
 
