--- a/src/pug/sections/index-page/questions.pug
+++ b/src/pug/sections/index-page/questions.pug
@@ -14,6 +14,6 @@ block content
   +main-btn({
     class: 'main-btn--outlined base-section__btn',
     text: 'Задать вопрос',
-    modal: 'callback'
+    modal: 'fag'
   })
 
