--- a/src/pug/sections/index-page/reviews.pug
+++ b/src/pug/sections/index-page/reviews.pug
@@ -22,8 +22,8 @@ block content
   +main-btn({
     class: 'main-btn--outlined base-section__btn',
     text: 'Оставить отзыв',
-    modal: 'reviews'
+    modal: 'review'
   })
 
-  include ../../modals/review-modal
+  //- include ../../modals/review-modal
 
