--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -10,6 +10,7 @@
 @import '../pug/components/links/main-link';
 @import '../pug/components/main-btn/main-btn';
 @import '../pug/components/controls/main-input/main-input';
+@import '../pug/components/controls/main-textarea/main-textarea';
 @import '../pug/components/sliders/main-slider/main-slider';
 
 // layouts
