--- a/src/pug/components/cards/review-card/_review-card.scss
+++ b/src/pug/components/cards/review-card/_review-card.scss
@@ -21,7 +21,7 @@
       font-size: 14px;
       font-weight: 300;
       padding: 0;
-      margin-top: var(--gap-m);
+      margin-top: var(--base-gap);
       min-height: fit-content;
       background-color: transparent;
       color: var(--primary);
@@ -43,6 +43,7 @@
 
   &__header {
     @extend %flex-column;
+    display: none;
 
     span {
       // font-style: italic;
@@ -67,8 +68,8 @@
 
     span {
       font-weight: var(--fw-r);
-      font-size: 18px;
-      color: var(--white);
+      font-size: 16px;
+      color: var(--secondary);
       text-transform: uppercase;
     }
 
