--- a/src/pug/content/services-list.pug
+++ b/src/pug/content/services-list.pug
@@ -3,20 +3,20 @@
     {
       title: 'Разработка сайтов',
       text: 'Процесс создания и настройки веб-сайтов для размещения информации в интернете. Этот процесс включает в себя выбор домена, хостинга, создание дизайна, программирование функционала сайта, оптимизацию под мобильные устройства и тестирование.',
-      linkSvg: 'services-detail.html',
-      linkText: 'services',
+      link: 'services-detail.html',
+      linkText: 'Подробнее'
     },
     {
       title: 'SEO продвижение',
       text: 'Комплекс мероприятий, направленных на улучшение позиций сайта в результатах поисковых систем, таких как Google, Яндекс и другие. Это включает в себя оптимизацию контента, увеличение ссылочной массы, улучшение технических параметров сайта и другие методы, чтобы привлечь больше посетителей и повысить видимость в поисковых системах.',
-      linkSvg: 'services-detail.html',
-      linkText: 'services',
+      link: 'services-detail.html',
+      linkText: 'Подробнее'
     },
     {
       title: 'Разработка дизайн-макетов',
       text: 'Создание визуального оформления сайта, включая шрифты, цвета, графику, распределение информации и другие элементы. Дизайн-макеты помогают создать уникальный и привлекательный внешний вид сайта, что важно для привлечения и удержания посетителей.',
-      linkSvg: 'services-detail.html',
-      linkText: 'services',
+      link: 'services-detail.html',
+      linkText: 'Подробнее'
     }
   ]
 
