--- a/src/pug/sections/index-page/portfolio.pug
+++ b/src/pug/sections/index-page/portfolio.pug
@@ -3,7 +3,7 @@ include ../../components/links/main-link
 
 block variables
   - sectionClass = "portfolio"
-  - sectionTitle = 'Наши <span>работы</span>'
+  - sectionTitle = 'Разработанные <span>Проекты</span>' 
 
 block content
   include ../../content/portfolio-list
