--- a/src/pug/components/cards/review-card/_review-card.scss
+++ b/src/pug/components/cards/review-card/_review-card.scss
@@ -69,6 +69,7 @@
     span {
       font-weight: var(--fw-r);
       font-size: 16px;
+      font-family: var(--primary-font);
       color: var(--secondary);
       text-transform: uppercase;
     }
