--- a/src/pug/content/portfolio-list.pug
+++ b/src/pug/content/portfolio-list.pug
@@ -5,7 +5,7 @@
       text: 'Сотрудничаем с агенством недвижимости, реализуем различные задачи от верстки до интеграции необходимых модулей в CRM-систему.',
       img: {
         alt: 'joywork.ru',
-        name: 'case.png'
+        name: 'case_alt.png'
       }
     },
 
@@ -14,7 +14,7 @@
       text: 'Сотрудничаем с агенством недвижимости, реализуем различные задачи от верстки до интеграции необходимых модулей в CRM-систему.',
       img: {
         alt: 'joywork.ru',
-        name: 'case.png'
+        name: 'case_alt.png'
       }
     },
 
@@ -23,7 +23,7 @@
       text: 'Сотрудничаем с агенством недвижимости, реализуем различные задачи от верстки до интеграции необходимых модулей в CRM-систему.',
       img: {
         alt: 'joywork.ru',
-        name: 'case.png'
+        name: 'case_alt.png'
       }
     },
 
@@ -32,7 +32,7 @@
       text: 'Сотрудничаем с агенством недвижимости, реализуем различные задачи от верстки до интеграции необходимых модулей в CRM-систему.',
       img: {
         alt: 'joywork.ru',
-        name: 'case.png'
+        name: 'case_alt.png'
       }
     },
   ]
