--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -42,3 +42,4 @@
 @import '../pug/sections/company/company';
 @import '../pug/sections/index-page/offer';
 @import '../pug/sections/index-page/questions';
+@import '../pug/sections/portfolio/portfolio-redesign/portfolio-single';
