--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -18,23 +18,23 @@ p {
 }
 
 h1 {
-  font-size: var(--fs-lg);
+  font-size: var(--fs-xl);
 }
 
 h2 {
-  font-size: var(--fs-md);
+  font-size: var(--fs-lg);
 }
 
 h3 {
-  font-size: var(--fs-sm);
+  font-size: var(--fs-md);
 }
 
 h4 {
-  font-size: var(--fs-xs);
+  font-size: var(--fs-sm);
 }
 
 h5 {
-  font-size: var(--fs-xs);
+  font-size: var(--fs-h5);
 }
 
 h6 {
@@ -43,32 +43,32 @@ h6 {
 
 .main-title {
   display: block;
-  font-size: var(--main-title-fs);
+  // font-size: var(--main-title-fs);
   font-weight: var(--main-title-fw);
   margin-bottom: 1em;
-  color: var(--main-title-color);
+  color: var(--white);
 
   span {
-    color: var(--white);
+    color: var(--main-title-color);
   }
 }
 
 .base-title {
   display: block;
-  font-size: var(--base-title-fs);
+  // font-size: var(--base-title-fs);
   font-weight: var(--base-title-fr);
   margin-bottom: clamp(calc(var(--gap-xl) * 1.1), 7vw, var(--gap-xxl));
-  color: var(--base-title-color);
+  color: var(--white);
 
   span {
-    color: var(--white);
+    color: var(--base-title-color);
   }
 }
 
 .main-text {
   display: block;
   font-family: var(--secondary-font);
-  font-size: var(--fs-sm);
+  // font-size: var(--fs-sm);
   line-height: 1.5;
   color: var(--main-text-color);
 }
@@ -85,6 +85,10 @@ h6 {
 
 .text-underlined {
   text-decoration: underline;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
 }
 
 .text-center {
@@ -169,4 +173,9 @@ h6 {
   &-t {
     font-weight: var(--fw-t);
   }
+}
+
+small {
+  font-size: calc(var(--fs-xs) - 2px);
+  color: var(--main-title-color);
 }
