--- a/src/pug/sections/content/content.pug
+++ b/src/pug/sections/content/content.pug
@@ -36,26 +36,40 @@ section.page-top-section.content-page
     p
       small Мелкий текст цветной
 
-    div.list-block 
-      span Нумерованный список
+    ul
+      li Lorem ipsum dolor sit amet
+      li Consectetur adipiscing elit
+      li Integer molestie lorem at massa
+      li Facilisis in pretium nisl aliquet
+      li Faucibus porta lacus fringilla vel
+      li Aenean sit amet erat nunc
+      li Eget porttitor lorem
 
-      ul
-        li Lorem ipsum dolor sit amet
-        li Consectetur adipiscing elit
-        li Integer molestie lorem at massa
-        li Facilisis in pretium nisl aliquet
-        li Faucibus porta lacus fringilla vel
-        li Aenean sit amet erat nunc
-        li Eget porttitor lorem
+    ol
+      li Lorem ipsum dolor sit amet
+      li Consectetur adipiscing elit
+      li Integer molestie lorem at massa
+      li Facilisis in pretium nisl aliquet
+      li Faucibus porta lacus fringilla vel
+      li Aenean sit amet erat nunc
+      li Eget porttitor lorem
 
-    div.list-block 
-      span Линейный список
+    blockquote "Ipsum sit mattis nulla quam nulla. Gravida id gravida ac enim mauris id. Non pellentesque congue eget consectetur turpis. Sapien, dictum molestie sem tempor. Diam elit, orci, tincidunt aenean tempus."
 
-      ol
-        li Lorem ipsum dolor sit amet
-        li Consectetur adipiscing elit
-        li Integer molestie lorem at massa
-        li Facilisis in pretium nisl aliquet
-        li Faucibus porta lacus fringilla vel
-        li Aenean sit amet erat nunc
-        li Eget porttitor lorem
+    div.table-overlay
+      table 
+        thead 
+          tr 
+            td Name
+            td Company
+            td Number
+            td Team
+            td Date
+        tbody 
+          tr 
+          td Full name
+          td Company name
+          td 14
+          td Team name
+          td
+            span Jan 11, 2050
