блок просмотр проекта

--- a/src/pug/sections/portfolio/portfolio-redesign/portfolio-redesign.pug
+++ b/src/pug/sections/portfolio/portfolio-redesign/portfolio-redesign.pug
@@ -8,4 +8,5 @@ block content
   include ./portfolio-redesign-tasks
   include ./portfolio-redesign-works
   include ./portfolio-redesign-tools
+  include ./portfolio-redesign-view
   
