--- a/src/pug/sections/portfolio/portfolio-redesign/portfolio-single.scss
+++ b/src/pug/sections/portfolio/portfolio-redesign/portfolio-single.scss
@@ -105,3 +105,224 @@
     height: 60px;
   }
 }
+
+.portfolio-single-view {
+  &__grid {
+    display: grid;
+    grid-template-columns: 6fr 3fr;
+    gap: var(--gap-l);
+    margin-top: 60px;
+
+    @include media-down($desktop-width) {
+      grid-template-columns: 1fr;
+      gap: var(--gap-m);
+    }
+
+    &-item:first-child {
+      position: relative;
+      width: 100%;
+      margin: 0 auto;
+
+      @include media-down($tablet-width) {
+        display: none;
+      }
+
+      .portfolio-single-view__grid-item-img {
+        position: relative;
+        width: 100%;
+        max-width: 900px;
+        height: 100%;
+        min-height: 550px;
+        margin: auto auto;
+
+        @include media-down($tablet-lg-width) {
+          max-width: 100%;
+        }
+
+        &::after {
+          position: absolute;
+          top: 0;
+          left: 50%;
+          transform: translate(-50%);
+          content: '';
+          width: 910px;
+          height: 570px;
+          background-image: url('../assets/images/mac-bg.png');
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: contain;
+          transition: transform var(--base-transition);
+          z-index: 20;
+
+          @include media-down($tablet-lg-width) {
+            width: 700px;
+          }
+        }
+
+        &::before {
+          content: '';
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          max-width: 670px;
+          max-height: 440px;
+          top: 60px;
+          left: 117px;
+          background-color: rgba(0, 0, 0, 0.5);
+          z-index: 2;
+
+          @include media-down($tablet-lg-width) {
+            max-width: 527px;
+            max-height: 339px;
+            top: 111px;
+            left: 50%;
+            transform: translate(-50%);
+          }
+        }
+
+        img {
+          max-width: 660px;
+          max-height: 430px;
+          position: absolute;
+          top: 60px;
+          left: 122px;
+          z-index: 1;
+
+          @include media-down($tablet-lg-width) {
+            max-width: 521px;
+            max-height: 360px;
+            top: 105px;
+            left: 50%;
+            transform: translate(-50%);
+          }
+        }
+      }
+
+      .portfolio-single-view__grid-item-btn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+        z-index: 30;
+        width: 100%;
+        max-width: 400px;
+        scale: 1;
+        cursor: pointer;
+        transition: scale 0.3s ease; /* Плавный переход для эффекта hover */
+        transform-origin: left; /* Точка масштабирования — центр элемента */
+
+        &:hover {
+          scale: 1.1;
+        }
+
+        img {
+          position: static;
+          max-width: 40px;
+          max-height: 40px;
+          z-index: 10;
+        }
+
+        p {
+          font-family: var(--secondary-font);
+          font-weight: var(--fw-b);
+          font-size: 18px;
+          line-height: 1.5;
+          color: var(--secondary);
+          text-align: center;
+        }
+      }
+    }
+
+    &-item:last-child {
+      position: relative;
+      width: 100%;
+      margin: 0 auto;
+
+      .portfolio-single-view__grid-item-img {
+        position: relative;
+        width: 100%;
+        max-width: 280px;
+        height: 100%;
+        min-height: 550px;
+        margin: auto auto;
+
+        &::after {
+          position: absolute;
+          top: 0;
+          left: 0;
+          content: '';
+          width: 280px;
+          height: 550px;
+          background-image: url('../assets/images/mobile-bg.png');
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          transition: transform var(--base-transition);
+          z-index: 20;
+        }
+        &::before {
+          content: '';
+          position: absolute;
+          top: 32px;
+          left: 21px;
+          width: 240px;
+          height: 484px;
+          background-color: rgba(0, 0, 0, 0.7);
+          z-index: 2;
+          border-radius: 30px;
+        }
+        img {
+          content: '';
+          position: absolute;
+          top: 32px;
+          left: 21px;
+          width: 240px;
+          height: 484px;
+          z-index: 1;
+          border-radius: 30px;
+        }
+      }
+      .portfolio-single-view__grid-item-btn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        align-items: center;
+        z-index: 30;
+        width: 100%;
+        max-width: 200px;
+        scale: 1;
+        cursor: pointer;
+        transition: scale 0.3s ease; /* Плавный переход для эффекта hover */
+        transform-origin: left; /* Точка масштабирования — центр элемента */
+
+        &:hover {
+          scale: 1.1;
+        }
+
+        img {
+          position: static;
+          width: 40px;
+          height: 40px;
+          z-index: 10;
+        }
+
+        p {
+          font-family: var(--secondary-font);
+          font-weight: var(--fw-b);
+          font-size: 12px;
+          line-height: 1.5;
+          color: var(--secondary);
+          text-align: center;
+        }
+      }
+    }
+  }
+}
