Модалка блока просмотр проекта

--- a/src/pug/layouts/main-layout.pug
+++ b/src/pug/layouts/main-layout.pug
@@ -22,6 +22,8 @@ html(lang="ru")
     include ../modals/error-modal
     include ../modals/expanded-text-modal
     include ../modals/review-modal
+    include ../modals/project-modal
+    include ../modals/mobile-project-modal
     include ../modals/fag-modal
 
     block modals
