--- a/src/pug/sections/portfolio/portfolio-redesign/portfolio-redesign-view.pug
+++ b/src/pug/sections/portfolio/portfolio-redesign/portfolio-redesign-view.pug
@@ -5,13 +5,13 @@ section.base-section.portfolio-single-view
     .portfolio-single-view__grid
       .portfolio-single-view__grid-item  
         .portfolio-single-view__grid-item-img  
-          img(src=`./assets/images/view.png` alt= "section_img" width="500" height="580")  
+          img(src="./assets/images/view.png" alt="section_img" width="500" height="580" data-project-img="./assets/images/view.png")  
           .portfolio-single-view__grid-item-btn 
-            img(src=`./assets/images/click.svg` alt= "click_img" width="40" height="40") 
+            img(src="./assets/images/click.svg" alt="click_img" width="40" height="40") 
             p Кликните для просмотра проекта на десктопной версии
       .portfolio-single-view__grid-item  
         .portfolio-single-view__grid-item-img  
-          img(src=`./assets/images/view.png` alt= "section_img" width="500" height="580")  
+          img(src="./assets/images/view.png" alt="section_img" width="500" height="580" data-mobile-project-img="./assets/images/view.png")  
           .portfolio-single-view__grid-item-btn 
-              img(src=`./assets/images/click.svg` alt= "click_img" width="40" height="40") 
-              p Кликните для просмотра проекта на мобильной версии
+            img(src="./assets/images/click.svg" alt="click_img" width="40" height="40") 
+            p Кликните для просмотра проекта на мобильной версии
