--- a/src/pug/modals/_modal.scss
+++ b/src/pug/modals/_modal.scss
@@ -79,3 +79,83 @@
     font-size: 14px;
   }
 }
+
+.project-modal {
+  max-width: 1000px;
+  height: 54vh;
+  overflow: hidden;
+  overflow-y: auto;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../assets/images/mac-bg.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  .modal-content {
+    position: absolute;
+    height: 100%;
+    max-height: 470px;
+    width: 100%;
+    max-width: 740px;
+    top: 78px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    overflow: hidden;
+    overflow-y: auto;
+    border: none;
+    padding: 0;
+    scrollbar-width: none; /* Для Firefox */
+    -ms-overflow-style: none;
+  }
+
+  .element-with-scroll::-webkit-scrollbar {
+    display: none; /* Полностью скрывает скроллбар */
+  }
+}
+
+.mobile-project-modal {
+  max-width: 800px;
+  height: 80vh;
+
+  overflow: hidden;
+  overflow-y: auto;
+  background-image: url('../assets/images/mobile-bg.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  .modal-closer {
+    right: 70px;
+  }
+
+  .modal-content {
+    position: absolute;
+    height: 100%;
+    max-height: 801px;
+    width: 100%;
+    max-width: 372px;
+    top: 66px;
+    left: 212px;
+    z-index: 1;
+    overflow: hidden;
+    overflow-y: auto;
+    border: none;
+    padding: 0;
+    border-radius: 60px;
+    scrollbar-width: none; /* Для Firefox */
+    -ms-overflow-style: none;
+  }
+  /* Скрываем скроллбар в WebKit-браузерах (Chrome, Edge, Safari) */
+  .element-with-scroll::-webkit-scrollbar {
+    display: none; /* Полностью скрывает скроллбар */
+  }
+}
