--- a/src/styles/variables/root/_typography.scss
+++ b/src/styles/variables/root/_typography.scss
@@ -3,11 +3,10 @@
   --secondary-font: 'Montserrat', sans-serif;
 
   // font sizes
-  --fs-xl: clamp(36px, 5vw, 64px);
-  --fs-lg: clamp(24px, 6vw, 52px);
-  // --fs-lg: clamp(24px, 6vw, 52px);
-  --fs-md: clamp(16px, 2.8vw, 24px);
-  --fs-sm: clamp(14px, 2.4vw, 18px);
+  --fs-xl: clamp(36px, 4vw, 56px);
+  --fs-lg: clamp(32px, 3.4vw, 48px);
+  --fs-md: clamp(28px, 3vw, 40px);
+  --fs-sm: clamp(24px, 2.6vw, 32px);
   --fs-xs: 12px;
   --fs-xxs: 10px;
 
@@ -37,4 +36,5 @@
   --base-title-color: var(--primary);
   --main-text-color: var(--secondary);
   --base-text-color: var(--secondary);
+  --base-cart-title-fs: calc(var(--fs-sm) / 1.8);
 }
