--- a/src/pug/components/cards/portfolio-card/_portfolio-card.scss
+++ b/src/pug/components/cards/portfolio-card/_portfolio-card.scss
@@ -9,7 +9,7 @@
   &__title {
     display: inline-block;
     font-family: var(--primary-font);
-    font-size: var(--fs-md);
+    font-size: var(--base-cart-title-fs);
   }
 
   &__text {
